contact page updated

--- a/insurance-project/index.html
+++ b/insurance-project/index.html
@@ -16,7 +16,7 @@
 <!--Header Block - Top container - Three medium boxes-->
     <div id="wrap">
         <header>
-            // hello its me
+           <!--hello its me--> 
             <div class="container">
                 <div class="blue-box">
                     <div class="blue-card">
